force-app/main/default/objects/Ticket__c/fields/NumberOfTickets__c.field-meta.xml
<CustomField>
    <fullName>NumberOfTickets__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Number of Tickets</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>