force-app/main/default/objects/Ticket__c/fields/ShowTicketsRemaining__c.field-meta.xml
<CustomField>
    <fullName>ShowTicketsRemaining__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Tickets Remaining</label>
    <type>Checkbox</type>
</CustomField>