force-app/main/default/objects/Ticket__c/fields/TicketsLeft__c.field-meta.xml
<CustomField>
    <fullName>TicketsLeft__c</fullName>
    <formula>NumberOfTickets__c  - TicketsSold__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tickets Left</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>