force-app/main/default/objects/Ticket__c/fields/TicketsSold__c.field-meta.xml
<CustomField>
    <fullName>TicketsSold__c</fullName>
    <label>Tickets Sold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>